src/objects/StudentAcademicCourseRequirement__c.object
<CustomObject>
    <description>Stores the requirements to complete a version of a course. For many records early on, this will only be one assessment to a course. Nursing will be the first group to apply multiple assessments to course. Several roll up summaries will be placed on the parent object to summarize status and engagement.</description>
    <fields>
        <fullName>Attempts__c</fullName>
        <description>The number of attempts made against this specific requirement and not the course as a whole.</description>
        <inlineHelpText>The number of attempts made against this specific requirement and not the course as a whole.</inlineHelpText>
        <label>Attempts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <description>The date the requirement was completed.</description>
        <inlineHelpText>The date the requirement was completed.</inlineHelpText>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EngagedPreassessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engaged Preassessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engaged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the student in engaged in this assessment.</description>
        <label>Engaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FullTitle__c</fullName>
        <label>Full Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreassessmentCode__c</fullName>
        <label>Preassessment Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The assessment has been referred this term.</description>
        <label>Referred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequirementCode__c</fullName>
        <label>Requirement Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The text status from Course of Study.</description>
        <label>Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentAcademicCourse__c</fullName>
        <label>Student Academic Course</label>
        <referenceTo>StudentAcademicCourse__c</referenceTo>
        <relationshipLabel>Student Academic Course Requirements</relationshipLabel>
        <relationshipName>StudentAcademicCourseRequirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Objective</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Student Academic Course Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assessment / Task Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Academic Course Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>